docs/api/qiskit/0.25/utils.mdx
---
title: utils (v0.25)
description: API reference for qiskit.utils in qiskit v0.25
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit.utils
---

<span id="module-qiskit.utils" />

<span id="qiskit-utils" />

<span id="utilities-qiskit-utils" />

# Utilities

`qiskit.utils`

|                                                                                                               |                                                                                    |
| ------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------- |
| [`deprecate_arguments`](qiskit.utils.deprecate_arguments "qiskit.utils.deprecate_arguments")(kwarg\_map)      | Decorator to automatically alias deprecated argument names and warn upon use.      |
| [`deprecate_function`](qiskit.utils.deprecate_function "qiskit.utils.deprecate_function")(msg\[, stacklevel]) | Emit a warning prior to calling decorated function.                                |
| [`local_hardware_info`](qiskit.utils.local_hardware_info "qiskit.utils.local_hardware_info")()                | Basic hardware information about the local machine.                                |
| [`is_main_process`](qiskit.utils.is_main_process "qiskit.utils.is_main_process")()                            | Checks whether the current process is the main one                                 |
| [`apply_prefix`](qiskit.utils.apply_prefix "qiskit.utils.apply_prefix")(value, unit)                          | Given a SI unit prefix and value, apply the prefix to convert to standard SI unit. |

## Algorithm Utilities

|                                                                                                       |                                                                              |
| ----------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------- |
| [`summarize_circuits`](qiskit.utils.summarize_circuits "qiskit.utils.summarize_circuits")             | Summarize circuits based on QuantumCircuit, and five metrics are summarized. |
| [`get_entangler_map`](qiskit.utils.get_entangler_map "qiskit.utils.get_entangler_map")                | Utility method to get an entangler map among qubits.                         |
| [`validate_entangler_map`](qiskit.utils.validate_entangler_map "qiskit.utils.validate_entangler_map") | Validate a user supplied entangler map and converts entries to ints.         |
| [`has_ibmq`](qiskit.utils.has_ibmq "qiskit.utils.has_ibmq")                                           | Check if IBMQ is installed                                                   |
| [`has_aer`](qiskit.utils.has_aer "qiskit.utils.has_aer")                                              | check if Aer is installed                                                    |
| [`name_args`](qiskit.utils.name_args "qiskit.utils.name_args")                                        | Decorator to convert unnamed arguments to named ones.                        |
| [`algorithm_globals`](qiskit.utils.algorithm_globals "qiskit.utils.algorithm_globals")                | Class for global properties.                                                 |

|                                                                                  |                                              |
| -------------------------------------------------------------------------------- | -------------------------------------------- |
| [`QuantumInstance`](qiskit.utils.QuantumInstance "qiskit.utils.QuantumInstance") | Quantum Backend including execution setting. |

A QuantumInstance holds the Qiskit backend as well as a number of compile and runtime parameters controlling circuit compilation and execution. Quantum [`algorithms`](algorithms#module-qiskit.algorithms "qiskit.algorithms") are run on a device or simulator by passing a QuantumInstance setup with the desired backend etc.

